--- a/_posts/2020-09-24-BAEKJOON#1021.md
+++ b/_posts/2020-09-24-BAEKJOON#1021.md
@@ -1,14 +1,15 @@
 ---
 layout: post
-title: BAEKJOON - 1021
-subtitle: [deque]회전하는 큐
-cover-img: /assets/img/path.jpg
+title: BAEKJOON 1021
+subtitle: 'deque' 회전하는 큐
+cover-img: /assets/img/avatar-icon.jpg
 thumbnail-img: /assets/img/posting/baekjoon.png
-share-img: /assets/img/path.jpg
-gh-repo: daattali/beautiful-jekyll
+share-img: /assets/img/avatar-icon.jpg
 tags: [que, BAEKJOON]
 comments: true
 ---
+
+## [BAEKJOON #1021](https://www.acmicpc.net/problem/1021)
 
 ```python
 n,m= map(int,input().split())
