--- a/_posts/2020-09-24-BAEKJOON#1021.md
+++ b/_posts/2020-09-24-BAEKJOON#1021.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: BAEKJOON 1021
-subtitle: 'deque' 회전하는 큐
+title: BAEKJOON#1021
+subtitle: 회전하는 큐
 cover-img: /assets/img/avatar-icon.jpg
 thumbnail-img: /assets/img/posting/baekjoon.png
 share-img: /assets/img/avatar-icon.jpg
