--- a/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
+++ b/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
@@ -9,7 +9,7 @@ tags: [que, BAEKJOON]
 comments: true
 ---
 
-## 회전하는 큐 PYTHON [BAEKJOON #1021](https://www.acmicpc.net/problem/1021)
+### [회전하는 큐](https://www.acmicpc.net/problem/1021)
 
 1부터 N까지 차례로 나열된 원소 중에서 두번째 줄에 입력 받은 숫자를 규칙에 따라 뽑을 때 큐를 왼쪽 혹은 오른쪽으로 이동시킨 횟수를 구하는 문제다.
 
