--- a/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
+++ b/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
@@ -15,7 +15,7 @@ comments: true
 
 숫자를 꺼내기 위해 왼쪽(2번 연산)으로 이동시킬지 오른쪽(3번 연산)으로 이동시킬지 판단해야 한다.
 리스트의 개수가 짝수일 때는 len(list)//2 번째 있는 요소를 첫 번째 원소로 위치시키는데 왼쪽이나 오른쪽이나 횟수가 같다.
-리스트의 개수가 홀수일 때는 len(list)//2 번째 있는 요소를 첫 번째 원소로 위치시키는데 왼쪽으로 이동시키는 것이 더 적은 횟수를 소모한다. Len(list)//2 번째 요소부터는 반대로 오른쪽으로 이동시키는 것이 더 적은 횟수를 소모한다.
+리스트의 개수가 홀수일 때는 len(list)//2 번째 있는 요소를 첫 번째 원소로 위치시키는데 왼쪽으로 이동시키는 것이 더 적은 횟수를 소모한다. len(list)//2 번째 요소부터는 반대로 오른쪽으로 이동시키는 것이 더 적은 횟수를 소모한다.
 
 왼쪽, 오른쪽으로 한칸 이동시키는 연산은 python에서 ‘덱’을 이용해 구현할 수 있다. List에서도 pop, insert와 append를 사용해 구현할 수 있지만, pop(0)와 insert(0,x)는 시간 복잡도가 O(N)으로 다루는 원소가 많아질수록 비효율적이다. 이것이 Collections의 deque를 사용하기로 한 이유이다.
 [Reference - 시간복잡도](https://www.ics.uci.edu/~pattis/ICS-33/lectures/complexitypython.txt)
@@ -48,6 +48,7 @@ while _pick:
 print(cnt)
 ```
 
+<br>
 # Case 2 - list
 
 list를 활용한 코드로 deque의 popleft, appendleft 대신 pop(0), insert()를 사용했다.
