--- a/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
+++ b/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
@@ -9,7 +9,7 @@ tags: [deque, BAEKJOON]
 comments: true
 ---
 
-### [회전하는 큐](https://www.acmicpc.net/problem/1021)
+## [회전하는 큐](https://www.acmicpc.net/problem/1021)
 
 1부터 N까지 차례로 나열된 원소 중에서 두번째 줄에 입력 받은 숫자를 규칙에 따라 뽑을 때 큐를 왼쪽 혹은 오른쪽으로 이동시킨 횟수를 구하는 문제다.
 
@@ -78,4 +78,4 @@ print(cnt)
 코드 길이 460이 deque를 사용한 코드 그리고 368이 list를 사용한 코드이다.
 예상과는 달리 list를 사용한 코드의 시간이 24ms 짧았다...
 (채점에 사용된 리스트의 크기가 충분히 길지 않아서 이런 일이 생긴듯 하다.)
-[check]](../assets/img/posting/1021baekjoon.JPG)
+[check]](./1021baekjoon.JPG)
