--- a/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
+++ b/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
@@ -22,7 +22,7 @@ comments: true
 
 Number에 1부터 N까지의 숫자로 이루어진 리스트를 집어넣고, pick의 첫번째 값과 number의 첫번째 값이 일치할 때 까지 왼쪽 혹은 오른쪽으로 한 칸 이동시키는 연산을 수행하도록 했다. 연산을 수행할 때 마다 cnt에 횟수를 추가해 주었다.
 
-# Case 1 – deque
+### Case 1 – deque
 
 ```python
 n,m= map(int,input().split())
@@ -48,8 +48,7 @@ while _pick:
 print(cnt)
 ```
 
-<br>
-# Case 2 - list
+### Case 2 - list
 
 list를 활용한 코드로 deque의 popleft, appendleft 대신 pop(0), insert()를 사용했다.
 이 방법을 사용할 경우 시간복잡도가 증가할 수 있다.
