--- a/_posts/2020-09-25-BAEKJOON#5430-AC.md
+++ b/_posts/2020-09-25-BAEKJOON#5430-AC.md
@@ -35,8 +35,8 @@ num=input()[1:-1].split(',')
 마지막으로 변수를 출력할 때 배열의 모습으로 출력해야 하는데 이때 join함수를 사용하면 된다.
 
 - R의 총 개수가 홀수 일 때는 배열을 뒤집어 주어야 하는데 실제로 배열을 뒤집는 작업 대신 [::-1]를 사용해 join함수 내에서 거꾸로 입력했다.
-  List[a:b:c] – list의 원소 중 a 부터 b 까지 간격(c)로 배열을 재구성한다는 의미다.
-  따라서 List[::-1]은 리스트의 첫 원소부터 끝 원소까지 -1간격으로, 따라서 역순으로 배열한다는 의미다!
+- List[a:b:c] – list의 원소 중 a 부터 b 까지 간격(c)로 배열을 재구성한다는 의미다.
+  따라서 List[::-1]은 리스트의 첫 원소부터 끝 원소까지 -1간격으로, 따라서 역순으로 배열한다는 의미다.
 
 ```python
 if rightodd:
@@ -45,9 +45,7 @@ if rightodd:
             print('['+','.join(answer)+']')
 ```
 
-### Code
-
-<br>
+## Code
 
 ```python
 import sys
@@ -83,21 +81,24 @@ for _ in range(int(input())):
             print('['+','.join(answer)+']')
 ```
 
+## Improved
+
 코드를 작성한 후 다른 방법은 없는지 검색해 보았다.
 
-###[Reference - blog](https://chancoding.tistory.com/41)
+### [Reference - blog](https://chancoding.tistory.com/41)
+
 이 블로그에서 훨씬 효율적인 방법을 참고할 수 있었다.
 
 매번 pop, popleft를 하며 원소를 제거해주는 대신 r,l 변수에 왼쪽, 오른쪽 각각 제거해야할 원소의 개수를 미리 저장해 놓고 연산이 끝난 후 한번에 처리해주는 방식이다.
 R의 개수가 홀수개 누적되어 있으면 r에 1씩 추가하고, 짝수개 누적되어 있으면 l에 1씩 추가하게 된다.
 
-l과 r의 합이 n보다 작거나 같다면(큰 경우에는 error) [:]를 활용해 원소들을 지워준다.
+l과 r의 합이 n보다 작거나 같다면(큰 경우에는 error)
 
 ```python
 answer=num[l:n-r]
 ```
 
-### Improved
+다음과 같이 [:]를 활용해 원소들을 지워준다.
 
 ```python
 import sys
