--- a/_posts/2020-09-26-BAEKJOON#10830-행렬-제곱.md
+++ b/_posts/2020-09-26-BAEKJOON#10830-행렬-제곱.md
@@ -42,63 +42,65 @@ comments: true
 656 34 412
 ```
 
-이 문제를 풀면서 동적 프로그래밍과 분할 정복이 뭐가 다른지 궁금증이 생겼다. 한번도 깊이 생각해보지 않았던 문제였다.
+행렬 A의 B제곱을 구하고, 각 원소를 1000으로 나눈 나머지를 출력하는 문제다.
 
-### 분할 정복 - Divide & Conquer
+먼저 입력을 받고 각 원소를 1000으로 나눈 나머지를 넣어줬다.
+행렬을 m번 곱한 값을 저장하기 위해 save라는 dictionary를 만들어 주고 1에 우리가 입력받은 matrix를 저장해준다. [포스팅을 하다가 알게 되었는데 동적 프로그래밍을 이용한 방법이었다.]
 
-분할 정복법은 여러 알고리즘의 기본이 되는 해결 방법으로, 기본적으로는 엄청나게 크고 방대한 문제를 조금씩 조금씩 나눠가면서 용이하게 풀 수 있는 문제 단위로 나눈 다음 그것들을 다시 합쳐서 해결하자는 개념에서 출발하였다.
+multiple 함수로 연산을 한다. 이때, m의 값을 확인한 후 이 값이 save안에 이미 저장되어 있으면 바로 값을 리턴해주고, save 안에 저장되어있지 않으면 m//2와 m-m//2로 더 작게 분할해 재귀함수를 호출한다.
+m//2와 m-m//2에 대한 값을 호출받았으면 두 행렬로 연산을 한 후 save[m]에 저장했다.
 
-- 분할: 문제를 동일한 유형의 여러 하위 문제로 나눈다.
-- 정복: 가장 작은 단위의 하위 문제를 해결하여 정복한다.
-- 조합: 하위 문제에 대한 결과를 원래 문제에 대한 결과로 조합한다.
-  [Reference](https://namu.wiki/w/%EB%B6%84%ED%95%A0%20%EC%A0%95%EB%B3%B5%EB%B2%95)
+```python
+for x in multiple(n,m):
+    for i in x:
+        print(i,end=' ')
+    print()
+```
 
-![Crepe](https://modoocode.com/img/algorithm/2.1.12.png)
+이전까지는 항상 행렬에 대한 출력을 위와 같이 해왔었다.
+포스팅을 하다가 알게된 사실인데 아래와 같이 배열앞에 \* 을 붙여 동일한 출력을 얻어낼 수 있다.
 
-### 동적 프로그래밍 - Dynamic Programming
-
-동적 계획법은 "어떤 문제를 풀기 위해 그 문제를 더 작은 문제의 연장선으로 생각하고, 과거에 구한 해를 활용하는" 방식의 알고리즘을 총칭한다.
-특정 범위까지의 값을 구하기 위해서 그것과 다른 범위까지의 값을 이용하여 효율적으로 값을 구하는 알고리즘 설계 기법이다.
-
-[Reference](https://namu.wiki/w/%EB%B6%84%ED%95%A0%20%EC%A0%95%EB%B3%B5%EB%B2%95)
-
-![Crepe](https://w.namu.la/s/c72a6f355ce77b072b312cb52dbb116b2b45bb5260ebedf9f79f6b68b0300aeb44ba8ca7bac3cf478a525c4ba6f6e284847b2cbbf61059f7e42ec2ba75250824adc323ce687aa99fb80035ca10866b5e70c2ca01a5836b9a43dd3706339ba72826c22ebee9bdcf1995a4583df346d7c1)
+```python
+for row in result:
+    print(*row)
+```
 
 ### Code
 
 ```python
 import sys
 n,m=map(int,sys.stdin.readline().split())
-list1=[list(map(int,sys.stdin.readline().split())) for _ in range(n)]
+matrix=[list(map(int,sys.stdin.readline().split())) for _ in range(n)]
 
-tmp=list([0 for _ in range(n)] for _ in range(n))
-#입력받은 후 각 항목을 1000으로 나눈다.
 for i in range(n):
     for j in range(n):
-        tmp[i][j]= list1[i][j]%1000
-#행렬을 n 번 곱한 값을 save[n]에 넣어줄 예정.
-save=dict()
-save[1]=tmp
+        matrix[i][j]= matrix[i][j]%1000
 
-def fun(n,m):
+#행렬을 n 번 곱한 값을 save[n]에 저장
+save=dict()
+save[1]=matrix
+
+def multiple(n,m):
+    # 행렬을 m번 연산한 값이 이미 저장되어있으면 바로 return
     if m in save:
         return save[m]
     else:
+        #저장되어있지 않을 경우 더 작은 값에 대해 재귀 호출을 한다.
         lista=fun(n,m//2)
         listb=fun(n,m-m//2)
-        tmp=list([0 for _ in range(n)] for _ in range(n))
+        matrix=list([0 for _ in range(n)] for _ in range(n))
 
         for i in range(n):
             for j in range(n):
-                tmp[i][j]=0
+                matrix[i][j]=0
                 for x in range(n):
-                    tmp[i][j]+=lista[i][x]*listb[x][j]
-                tmp[i][j]%=1000
+                    matrix[i][j]+=lista[i][x]*listb[x][j]
+                matrix[i][j]%=1000
 
-        save[m]=tmp
+        save[m]=matrix
         return save[m]
 #출력
-for x in fun(n,m):
+for x in multiple(n,m):
     for i in x:
         print(i,end=' ')
     print()
@@ -150,6 +152,35 @@ for i in range(len(B)):
 for row in result:
     print(*row)
 ```
+
+<br>
+
+이 문제를 풀면서 동적 프로그래밍과 분할 정복이 뭐가 다른지 궁금증이 생겼다. 한번도 깊이 생각해보지 않았던 문제였다.
+
+### 분할 정복 - Divide & Conquer
+
+"분할 정복법은 여러 알고리즘의 기본이 되는 해결 방법으로, 기본적으로는 엄청나게 크고 방대한 문제를 조금씩 조금씩 나눠가면서 용이하게 풀 수 있는 문제 단위로 나눈 다음 그것들을 다시 합쳐서 해결하자는 개념에서 출발하였다."
+
+- 분할: 문제를 동일한 유형의 여러 하위 문제로 나눈다.
+- 정복: 가장 작은 단위의 하위 문제를 해결하여 정복한다.
+- 조합: 하위 문제에 대한 결과를 원래 문제에 대한 결과로 조합한다.
+  [Reference](https://namu.wiki/w/%EB%B6%84%ED%95%A0%20%EC%A0%95%EB%B3%B5%EB%B2%95)
+
+### 동적 프로그래밍 - Dynamic Programming
+
+"동적 프로그래밍 어떤 문제를 풀기 위해 그 문제를 더 작은 문제의 연장선으로 생각하고, 과거에 구한 해를 활용하는 방식의 알고리즘을 총칭한다. - 메모이제이션
+특정 범위까지의 값을 구하기 위해서 그것과 다른 범위까지의 값을 이용하여 효율적으로 값을 구하는 알고리즘 설계 기법이다."
+[Reference](https://namu.wiki/w/%EB%8F%99%EC%A0%81%20%EA%B3%84%ED%9A%8D%EB%B2%95)
+
+이처럼 동적 프로그래밍에서는 여러개의 작은 문제들로 나눈 후, 이들을 풀 때 같은 문제에 대해 매번 계산하지 않도록 메모이제이션을 사용해 값을 저장했다가 재사용한다.(과거에 구한 해를 활용한다.)
+
+분할 정복과 동적 프로그래밍 방식 모두 하나의 문제를 부분 문제로 나눠 계산한 후 합쳐 문제의 답을 구한다는 공통점이 있다. 동적 프로그래밍은 메모이제이션을 통해 부분 문제의 정답을 저장해놓고 사용한다는 차이점이 있다.
+
+![Crepe](https://www.onlybook.co.kr/entry/algorithm-interview)
+
+내 첫번째 코드는 save에 행렬끼리 n번 곱한 값을 save[n]에 저장해두며 사용하고 있다. 메모이제이션을 사용해 동적 프로그래밍을 이용한 것이다.
+
+다른 분의 블로그에서 가져온 아래의 코드는 별도로 메모이제이션을 사용하지 않고 이진법을 활용해 계산하고 있음으로 분할 정복을 이용한 코드다.
 
 <br>
 <br>
