--- a/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
+++ b/_posts/2020-09-24-BAEKJOON#1021-회전하는-큐.md
@@ -78,7 +78,7 @@ print(cnt)
 예상과는 달리 list를 사용한 코드의 시간이 24ms 짧았다...
 (채점에 사용된 리스트의 크기가 충분히 길지 않아서 이런 일이 생긴듯 하다.)
 
-![check](https://i.imgur.com/n0eNc44.jpg)
+![Crepe](https://i.imgur.com/n0eNc44.jpg)
 
 <br>
 <br>
