--- a/_posts/2020-10-01-BAEKJOON#9251-LCS.md
+++ b/_posts/2020-10-01-BAEKJOON#9251-LCS.md
@@ -13,8 +13,7 @@ comments: true
 
 _TEST CASE_
 
-혹시 문제를 풀다가 예시들은 모두 제대로 출력되는데 제출하면 틀렸다고 나오시는 분들은 아래의 테스트 케이스에 대해 한 번더 생각해보면 도움이 될 것 같다.
-아래의 테스트 케이스에 대해서도 한번 더 고민해보자.
+혹시 문제를 풀다가 예시들은 모두 제대로 출력되는데 제출하면 틀렸다고 나오시는 분들은 아래의 테스트 케이스에 대해 생각해보면 도움이 될 것 같다.
 
 ```
 AGGTAB
