--- a/_posts/2020-10-03-BAEKJOON#2178-미로탐색.md
+++ b/_posts/2020-10-03-BAEKJOON#2178-미로탐색.md
@@ -11,6 +11,19 @@ comments: true
 
 ## [미로 탐색](https://www.acmicpc.net/problem/2178)
 
+N \* M 리스트가 주어졌을 때 (1,1)에서 (N,M)까지 가는 최단거리를 구하는 문제다.
+
+최단거리를 구하는 문제이기 때문에 BFS로 탐색을 하다가 목적지에 도착하는 순간 저장된 거리를 출력해줘야 한다.
+
+DFS는 STACK을 사용해 구현하는 반면 BFS를 코드로 구현하기 위해서는 선입선출 구조의 큐를 사용한다.
+
+이 문제에서는 지나간 곳은 다시 지나지 않도록 check리스트를 추가로 생성했다. 방문한 곳을 다시 방문한다는 것은 해당 칸 까지 도달하는데 이미 저장되어있는 값과 같거나 혹은 더 오래 걸렸다는 뜻이기 때문이다.
+
+- check리스트는 우선 0으로 모두 초기화 해주고, 시작지점인 (0,0)만 1로 바꿔준다.
+- 다른 칸으로 이동했을 때 이전 칸의 check리스트 값에서 1을 더해 현재 check리스트 값에 넣어준다.(한칸 씩 이동할 때 마다 이동한 거리가 저장된다.)
+- bfs 큐를 생성해 BFS를 구현한다. 큐에서 원소를 'popleft'로 뺄때 마다 해당 칸에서 갈 수 있는 아직 가지 않은 칸을 BFS에 'append'해준다.
+- 위의 작업을 도착지에 도착할 때 까지 반복해준다. 최초로 도착지에 도착하게 되면 도착지의 check리스트 값을 출력하고 시스템을 종료한다!(혹은 break를 통해 while문 탈출)
+
 <br>
 
 ### CODE
