--- a/_posts/2020-10-10-BAEKJOON#7620-편집거리.md
+++ b/_posts/2020-10-10-BAEKJOON#7620-편집거리.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: BAEKJOON#2631 줄 세우기
+title: BAEKJOON#7620 편집 거리
 subtitle: Python
 cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
@@ -9,7 +9,13 @@ tags: [DP, BAEKJOON]
 comments: true
 ---
 
-## [줄 세우기](https://www.acmicpc.net/problem/2631)
+## [편집 거리](https://www.acmicpc.net/problem/7620)
+
+[가장 긴 증가하는 부분 수열](https://youseop.github.io/2020-09-29-BAEKJOON-DP.1-LIS/)의 응용 문제이다.
+
+![Crepe](https://i.imgur.com/FNz75wX.jpg)
+
+![Crepe](https://i.imgur.com/NvK8HpS.jpg)
 
 <br>
 
