--- a/_posts/2020-10-02-BAEKJOON#11049-행렬곱셈순서.md
+++ b/_posts/2020-10-02-BAEKJOON#11049-행렬곱셈순서.md
@@ -92,7 +92,7 @@ DP로 푸는 문제라는 것을 알고 접근해도, 점화식을 생각하고 
 - [Knapsack Problem](https://youseop.github.io/2020-09-30-BAEKJOON-DP.2-knapsack/) (완료)
 - [Longest Common Sequence](https://youseop.github.io/2020-10-01-BAEKJOON-9251-LCS/) (완료)
 - [Longest Increasing Subsequence](https://youseop.github.io/2020-09-29-BAEKJOON-DP.1-LIS/) (완료)
-- Edit distance
+- [Edit distance](https://youseop.github.io//2020-10-10-BAEKJOON-7620-%ED%8E%B8%EC%A7%91%EA%B1%B0%EB%A6%AC/)(완료)
 - [Matrix Chain Multiplication](https://youseop.github.io/2020-10-02-BAEKJOON-11049-%ED%96%89%EB%A0%AC%EA%B3%B1%EC%85%88%EC%88%9C%EC%84%9C/) (완료)
 
 [다시 풀어보기]
