--- a/_posts/2020-10-16-오늘의 문제.md
+++ b/_posts/2020-10-16-오늘의 문제.md
@@ -2,6 +2,7 @@
 layout: post
 title: 오늘의 문제 - 평범한 배낭, 트리 가짓수 세기
 subtitle: Python
+cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
 share-img: /assets/img/posting/mountain.jpg
 tags: [오늘의 문제, BAEKJOON]
@@ -40,6 +41,9 @@ print(max(dp))
 <br>
 
 ## [트리 가짓수 세기](https://www.acmicpc.net/problem/20054)
+
+규칙을 찾아보고, 이진 검색 트리의 깊이도 찾아봤는데, 해결할 기미가 안보인다...
+일요일 전까지 풀어보자.
 
 <br>
 <br>
