--- a/_posts/2020-10-22-오늘의 문제.md
+++ b/_posts/2020-10-22-오늘의 문제.md
@@ -9,6 +9,10 @@ tags: [오늘의 문제, BAEKJOON]
 comments: true
 ---
 
+## [오답노트 - 회전하는 큐](https://youseop.github.io/2020-09-24-BAEKJOON-1021-%ED%9A%8C%EC%A0%84%ED%95%98%EB%8A%94-%ED%81%90/)
+
+첫 게시글이었는데 드디어 다시 풀었다. 하루에 한 문제씩 뒤에서부터 다시 풀어나가야겠다.
+
 ## [아기상어](https://www.acmicpc.net/problem/16236)
 
 <br>
