--- a/_posts/2020-10-21-오늘의 문제.md
+++ b/_posts/2020-10-21-오늘의 문제.md
@@ -5,7 +5,7 @@ subtitle: Python
 cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
 share-img: /assets/img/posting/mountain.jpg
-tags: [오늘의 문제, BAEKJOON]
+tags: [오늘의 문제]
 comments: true
 ---
 
