--- a/_posts/2020-10-23-오늘의 문제.md
+++ b/_posts/2020-10-23-오늘의 문제.md
@@ -14,6 +14,8 @@ comments: true
 한달 전에 풀고 포스팅했던 기억이 나서, 쉽게 풀릴줄 알았는데 꽤 애를 먹었다.
 이번에는 Delete때 마다, 배열의 앞, 뒤로 원소를 빼는 것이 아니라, 포인터 두개를 활용해 문제를 풀었다.
 
+<br>
+
 ## [오답노트 - 내리막길](https://youseop.github.io/2020-10-13-BAEKJOON-1520-%EB%82%B4%EB%A6%AC%EB%A7%89%EA%B8%B8/)
 
 오늘의 문제 겸 오답노트로 내리막길을 다시 풀어보았다.
@@ -23,6 +25,12 @@ comments: true
 
 지나간 길의 목록들을 달고다니면서 DFS를 수행한것이 시간복잡도가 증가한 원인이었다.
 아래의 코드는 시행착오를 겪었던 코드이다.
+
+풀었다!
+
+![Crepe](https://i.imgur.com/yUPwr00.jpg)
+
+<br>
 
 ### CODE - 시간초과
 
