--- a/_posts/2020-09-26-BAEKJOON#10830-행렬-제곱.md
+++ b/_posts/2020-09-26-BAEKJOON#10830-행렬-제곱.md
@@ -101,8 +101,8 @@ def multiple(n,m):
         return save[m]
     else:
         #저장되어있지 않을 경우 더 작은 값에 대해 재귀 호출을 한다.
-        lista=fun(n,m//2)
-        listb=fun(n,m-m//2)
+        lista=multiple(n,m//2)
+        listb=multiple(n,m-m//2)
         matrix=list([0 for _ in range(n)] for _ in range(n))
 
         for i in range(n):
@@ -176,7 +176,6 @@ print(format(10,'b'))
 
 ```python
 import sys
-sys.stdin=open('input.txt','rt')
 #행렬 곱셈 함수
 def matrix_mul(a, b):
     result = [[0]* N for _ in range(N)]
@@ -243,5 +242,6 @@ for row in result:
 이와 다르게 다른 분의 블로그에서 가져온 코드는 별도로 메모이제이션을 사용하지 않고 이진법을 활용해 계산했다.
 
 [다시 풀어보기]
+✔ - 2020.10.25
 <br>
 <br>
