--- a/_posts/2020-10-25-BAEKJOON#10830_행렬제곱(비트연산자).md
+++ b/_posts/2020-10-25-BAEKJOON#10830_행렬제곱(비트연산자).md
@@ -5,7 +5,7 @@ subtitle: Python
 cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
 share-img: /assets/img/posting/mountain.jpg
-tags: [DFS, BAEKJOON]
+tags: [행렬, 비트연산자, BAEKJOON]
 comments: true
 ---
 
