--- a/_posts/2020-09-27-BAEKJOON#9471-피사노-주기.md
+++ b/_posts/2020-09-27-BAEKJOON#9471-피사노-주기.md
@@ -9,7 +9,7 @@ tags: [분할 정복, BAEKJOON]
 comments: true
 ---
 
-## [행렬 제곱](https://www.acmicpc.net/problem/9471)
+## [피사노 주기](https://www.acmicpc.net/problem/9471)
 
 ### 문제
 
@@ -109,5 +109,6 @@ for _ in range(int(input())):
 이를 활용해 피보나치 수 3 문제를 풀어보자.
 
 [다시 풀어보기]
+✔ - 2020.10.26
 <br>
 <br>
