--- a/_posts/2020-10-27-BAEKJOON#12852_1로만들기2.md
+++ b/_posts/2020-10-27-BAEKJOON#12852_1로만들기2.md
@@ -5,7 +5,7 @@ subtitle: Python
 cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
 share-img: /assets/img/posting/mountain.jpg
-tags: [DP], BAEKJOON]
+tags: [DP, BAEKJOON]
 comments: true
 ---
 
