--- a/_posts/2020-11-19-BAEKJOON#2263_트리의순회.md
+++ b/_posts/2020-11-19-BAEKJOON#2263_트리의순회.md
@@ -9,7 +9,7 @@ tags: [이진트리, BAEKJOON]
 comments: true
 ---
 
-## [BFS와 DFS](https://www.acmicpc.net/problem/2263)
+## [트리의 순회](https://www.acmicpc.net/problem/2263)
 
 이진트리에 관한 문제다.
 In-Order, Post-Order 그리고 Pre-Order 관련한 내용은 이를 다루고 있는 다른 블로그도 많기 때문에 다루지 않겠다. 한 번 검색해보자.
