--- a/_posts/2020-10-31-10월말결산.md
+++ b/_posts/2020-10-31-10월말결산.md
@@ -5,7 +5,7 @@ subtitle: Python
 cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
 share-img: /assets/img/posting/mountain.jpg
-tags: [10월]
+tags: [History]
 comments: true
 ---
 
