--- a/_posts/2020-12-10-JUNGLE_12_11_JUNGLE.md
+++ b/_posts/2020-12-10-JUNGLE_12_11_JUNGLE.md
@@ -9,6 +9,8 @@ tags: [기록🎉, Jungle]
 comments: true
 ---
 
+<br>
+
 ## 열정
 
 지난 여름 인턴을 하면서 열정이라곤 눈을 씻고도 찾아볼 수 없는 사람들의 눈빛을 봤다.
@@ -20,7 +22,62 @@ comments: true
 
 책을 읽은지 1년이 다 되어가는데도 이 문장이 아직 생생하게 머릿속에 남아있다.
 
-강에 빠지지 않기 위해서 허우적대는 것이 힘들더라도, 혹은 아무리 물이 무섭더라도 강에 몸을 맡기고 바다라는 더 큰 세상으로 하루하루 나아가고 싶다.
+강에 빠지지 않기 위해서 허우적대는 것이 힘들더라도, 혹은 아무리 물이 무섭더라도 강에 몸을 맡기고 바다라는 더 큰 세상으로 하루하루 나아갈 것이다.
+
+<br>
+
+## 꾸준함
+
+최근 꾸준함이라는 가치를 가장 우선순위에 두고 있다.
+현재 '한 달만 꾸준히 해봅시다.🔥'라는 활동을 진행하고 있기도 하다.
+5개월 동안 하루도 빠짐없이 그리고 꾸준히 실천해 나가며, 어제의 나보다 조금이라도 나아지는 매일을 살 계획이다.
+
+<!-- ### 매일
+
+- 알고리즘 문제 최소 한 문제 풀기
+- 스트레칭
+- 하루 세번 거울 보면서 미소짓기
+
+### 평일
+
+- 아침 10시까지 강의실 도착 & 밤 12시 30분 이후 기숙사 돌아오기
+
+--- -->
+'Ford vs Ferrari'영화에 이런 대사가 나온다.
+
+If you're going to push a piece of machinery to the limit, and expect it to hold together, you have to have some sense of where that limit is. - Ken Miles
+
+'르망24시'라는 경기는 24시간동안 프랑스 시골길을 달리는 경기이다.
+굉장히 오랜시간 경기를 치뤄야하기 때문에 차량의 한계를 넘어서 주행을 하다가는 차가 중간에 퍼져버린다. 반대로, 차를 살살 다루며 주행 하면 순위가 밀려날 수 밖에 없다. 
+
+이러한 상황에서 레이서는 차량의 한계를 정확히 파악하고 그 한계치 내에서 차량의 성능을 최대로 이끌어 내며 주행해야 한다.
+
+정글에 5개월간 몰입하기 위해 와있는 지금 상황도 비슷한 것 같다.
+한달정도 짧게 하고 끝나는 프로그램이 아니기 때문에 초반부터 매일 밤을 새고 무리한다면, 장기적으로 높은 집중력을 끌고갈 수 없다. 반대로, 여유롭게 하루하루를 보내면 5개월간 집약해서 성장할 수 없을 것이다.
+
+그날의 한계치까지 끌어올리는 하루 하루를 살아가자. 5개월을 '꾸준히' 지속할 수 있도록🔥
+
+<br>
+
+## 5개월 후
+
+5개월 후에 내 실력이 어느정도까지 성장해 있겠다 라고 말하기는 너무 모호하고, 지금 시점에서 판단하기도 힘들다.
+
+5개월 후에 이 과정들을 돌아봤을 때, 조금 더 열심히 해볼걸 이라는 후회를 남기지 않는다면 이 5개월이 나에게 충분히 의미있는 시간이 될 것 같다.
+
+5개월간 꾸준히 한발 한발 내딧는 법을 배워 앞으로 10년, 20년 더 걸어나갈 수 있는 근육과 정신력 그리고 함께 걸을 동료들을 얻어가야겠다.
+
+
+
+
+
+
+
+
+<br>
+
+
+
 
 
 
