--- a/_posts/2020-12-10-JUNGLE_12_11_JUNGLE.md
+++ b/_posts/2020-12-10-JUNGLE_12_11_JUNGLE.md
@@ -11,21 +11,6 @@ comments: true
 
 <br>
 
-## 열정
-
-지난 여름 인턴을 하면서 열정이라곤 눈을 씻고도 찾아볼 수 없는 사람들의 눈빛을 봤다.
-
-
-이병률님의 '끌림'이라는 산문집에 이런 말이 있다.
-
-'열정은 강 하나를 사이에 두고 건넌 자와 건너지 않은 자로 비유되고 구분되는 것이 아니라, 강물에 몸을 던져 물살을 타고 먼 길을 떠난 자와 아직 채 강물에 발을 담그지 않은 자, 그 둘로 비유된다.'
-
-책을 읽은지 1년이 다 되어가는데도 이 문장이 아직 생생하게 머릿속에 남아있다.
-
-강에 빠지지 않기 위해서 허우적대는 것이 힘들더라도, 혹은 아무리 물이 무섭더라도 강에 몸을 맡기고 바다라는 더 큰 세상으로 열정을 가지고 하루하루 나아갈 것이다.
-
-<br>
-
 ## 꾸준함
 
 최근 꾸준함이라는 가치를 가장 우선순위에 두고 있다.
@@ -48,11 +33,22 @@ If you're going to push a piece of machinery to the limit, and expect it to hold
 
 <br>
 
+## 열정
+
+지난 여름 인턴을 하면서 열정이라곤 눈을 씻고도 찾아볼 수 없는 사람들의 눈빛을 봤다.
+
+'열정은 강 하나를 사이에 두고 건넌 자와 건너지 않은 자로 비유되고 구분되는 것이 아니라, 강물에 몸을 던져 물살을 타고 먼 길을 떠난 자와 아직 채 강물에 발을 담그지 않은 자, 그 둘로 비유된다.'
+
+이병률님의 '끌림'이라는 산문집에서 읽었던 글인데, 열정 없는 눈빛들을 보며 이 문장이 떠올랐다.
+
+강에 빠지지 않기 위해서 허우적대는 것이 힘들더라도, 혹은 아무리 물이 무섭더라도 강에 몸을 맡기고 바다라는 더 큰 세상으로 열정을 가지고 하루하루 나아갈 것이다.
+
+<br>
+
 ## 5개월 후
 
-5개월 후에 내 실력을 어느 정도까지 키우겠다고 말하기는 너무 모호하고, 지금 시점에서 판단하기도 힘들다.
-
 5개월 후에 이 과정들을 돌아봤을 때, 조금 더 열심히 해볼 걸이라는 후회를 남기지 않는다면 이 5개월이 나에게 충분히 의미 있는 시간이 될 것 같다.
+이 글과 5개월 간의 나 자신을 돌아봤을 때 다시 5개월을 시작해도 이보다 열심히 할 자신은 없을 정도로 불태워보자.
 
 5개월간 꾸준히 한발 한발 내딛는 법을 배워 앞으로 10년, 20년 더 걸어나갈 수 있는 근육과 정신력 그리고 함께 걸을 동료들을 얻어 가야겠다.
 
