--- a/_posts/2020-12-15-BAEKJOON#15666_N과M12.md
+++ b/_posts/2020-12-15-BAEKJOON#15666_N과M12.md
@@ -5,7 +5,7 @@ subtitle: Python
 cover-img: /assets/img/posting/mountain.jpg
 thumbnail-img: /assets/img/posting/baekjoonrect.png
 share-img: /assets/img/posting/mountain.jpg
-tags: [ BAEKJOON]
+tags: [DFS, BAEKJOON]
 comments: true
 ---
 
